src/objects/Item__c.object
<CustomObject>
    <description>Fashion Item</description>
    <fields>
        <fullName>Item_Category__c</fullName>
        <label>Item Category</label>
        <picklist>
            <picklistValues>
                <fullName>Cloth</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Shoes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewellery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Item_Color__c</fullName>
        <label>Item Color</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Item_Email__c</fullName>
        <label>Item Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Item_Id__c</fullName>
        <description>Item Id</description>
        <displayFormat>ID-{000000}</displayFormat>
        <label>Item Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Item_Modified_Date__c</fullName>
        <label>Item Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <defaultValue>&quot;NONE&quot;</defaultValue>
        <description>Item Name</description>
        <inlineHelpText>Name</inlineHelpText>
        <label>Item Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Item Price</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Rating__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Item Rating</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <picklist>
            <picklistValues>
                <fullName>Trouser</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Frock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shirt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blouse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Item_Url__c</fullName>
        <label>Item Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Item_Vendor__c</fullName>
        <label>Item Vendor</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ITEM-{000000}</displayFormat>
        <label>Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>